k8s/course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: default
  labels:
    app: course-service
    tier: backend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
        tier: backend
    spec:
      containers:
        - name: course-service
          image: ghcr.io/cyber-pnl/k8sproject/course-service:e710b1e16519601bf849e24f86ae3f815f4db821
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
