k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: frontend-service
    tier: frontend
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
        tier: frontend
    spec:
      containers:
        - name: frontend-service
          image: ghcr.io/cyber-pnl/k8sproject/frontend-service:0fa4f8338f8fa0c62c667ce232ffa0fdcd4f8a4b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
