k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: default
  labels:
    app: gateway-service
    tier: gateway
   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
        tier: gateway
    spec:
      containers:
        - name: gateway-service
          image: ghcr.io/cyber-pnl/k8sproject/gateway-service:f6baa22133218138a1fca588be8077ae91c673cd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
