k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: default
  labels:
    app: user-service
    tier: backend
   
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
        - name: user-service
          image: ghcr.io/cyber-pnl/k8sproject/user-service:fd43cd3c4c42516a07b839d947ce5f341d5309a4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
