k8s/course-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: default
  labels:
    app: course-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
        tier: backend
    spec:
      containers:
        - name: course-service
          image: ghcr.io/cyber-pnl/k8sproject/course-service:c9feea975f7b86ddd08632c7b094816503a6ca24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
  namespace: default
spec:
  selector:
    app: course-service
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  type: ClusterIP
