k8s/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: default
  labels:
    app: frontend-service
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
        tier: frontend
    spec:
      containers:
        - name: frontend-service
          image: ghcr.io/cyber-pnl/k8sproject/frontend-service:c9feea975f7b86ddd08632c7b094816503a6ca24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend-service
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: ClusterIP
