k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: default
   
spec:
  selector:
    app: gateway-service
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
