k8s/node-service.yaml
# k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - port: 3000
      targetPort: 3000
