k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: default
  labels:
    app: user-service
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        tier: backend
    spec:
      containers:
        - name: user-service
          image: ghcr.io/cyber-pnl/k8sproject/user-service:c9feea975f7b86ddd08632c7b094816503a6ca24
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: default
spec:
  selector:
    app: user-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
