k8s/network-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubelearn-gateway
  namespace: default
  annotations:
    traefik.io/entrypoints: web,websecure
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      port: 443
      protocol: HTTPS
      hostname: kubelearn.duckdns.org
      tls:
        certificateRefs:
          - name: kubelearn-app-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
